<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.ahl.dogwalkrun.ReviewUploadActivity"
    tools:showIn="@layout/activity_review_upload"
    style="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Run-Walk Summary Data:"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/headerSummary"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="20dp"
        android:singleLine="false"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerSummary"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/tableLayoutSum"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="30dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logDate"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/logDate"
                android:layout_column="1" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startTime"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/startTime"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distRun"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/runDist"
                android:layout_column="1" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeRun"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/runTime"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distTotal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/totDist"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeTotal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/totTime"
                android:layout_column="1" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/buttonSave"
        android:layout_below="@+id/tableLayoutSum"
        android:layout_alignRight="@+id/headerSummary"
        android:layout_alignEnd="@+id/headerSummary"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
