<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ahl.dogwalkrun.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:id="@+id/buttonStart"
        android:textSize="@dimen/text_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonStart"
        android:layout_centerHorizontal="true"
        android:stretchColumns="1,2"
        android:paddingTop="30dp"
        android:id="@+id/tableLayoutLive">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dip" />

            <TextView
                android:text="@string/headerDist"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dip"
                android:gravity="center_horizontal" />

            <TextView
                android:text="@string/headerTime"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center_horizontal"
                android:padding="5dip" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="Run"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingTop="15dp"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/runDist"
                android:layout_gravity="center_horizontal"
                android:layout_column="1"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/runTime"
                android:layout_gravity="center_horizontal"
                android:layout_column="2"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="Total"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="8dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalDist"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalTime"
                android:layout_column="2"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp" />

        </TableRow>

    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Stop"
        android:id="@+id/buttonStop"
        android:visibility="invisible"
        android:textSize="@dimen/text_button"
        android:textStyle="bold"
        android:layout_below="@+id/tableLayoutLive"/>

</RelativeLayout>
